# Codex_Crewai_170925

./: README.md
test_170925/: .env.example  README.md  pyproject.toml  requirements.txt
test_170925/src/test_170925/: crew.py  main.py
