[project]
name = "test_170925"
version = "0.1.0"
description = "test_170925 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
test_170925 = "test_170925.main:run"
run_crew = "test_170925.main:run"
train = "test_170925.main:train"
replay = "test_170925.main:replay"
test = "test_170925.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
